--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Tamagotchi</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
     <main class="base">
+        <i onclick="modoEscuro()" id="toggle-theme" class="fa-solid fa-dog" style="color: #000000;"></i>
         <!-- Imagem do Tamagotchi -->
         <img id="ciço" class="base__imagem" src="assets/ciço.gif" style="height: 250px; width: 250px;" alt="gatinho feliz">
         <!-- Barra de ações -->
