alterei o alt da imagem do html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main class="base">
         <i onclick="modoEscuro()" id="toggle-theme" class="fa-solid fa-dog" style="color: #000000;"></i>
         <!-- Imagem do Tamagotchi -->
-        <img id="ciço" class="base__imagem" src="assets/ciço.gif" style="height: 150px; width: 150px;" alt="gatinho feliz">
+        <img id="ciço" class="base__imagem" src="assets/ciço.gif" style="height: 150px; width: 150px;" alt="imagem do pinguim">
         <!-- Barra de ações -->
         <div class="base__acoes-container">
             <div class="base__acoes">
